--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-toast-popup",
+  "name": "hillary-sweet-toast",
   "version": "1.1.3",
-  "description": "React Toast Popup is a simple and customizable toast notification component for React applications.",
+  "description": "hillary sweet toast is a simple and customizable toast notification component for React applications.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/piyush-eon/react-toast-popup.git"
+    "url": "https://github.com/hill-nicholas/hillary-sweet-toast.git"
   },
   "keywords": [
     "react",
